// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should handle HIDE_ALERT 1`] = `
Object {
  "alerts": Array [],
  "app": Object {
    "data": Object {
      "product": Object {
        "description": "",
        "hours": Object {},
        "images": Array [],
        "name": "",
      },
      "products": Array [
        Object {
          "id": "",
          "images": Array [
            Object {
              "id": 0,
              "image_urls": Object {
                "thumb": "",
              },
            },
          ],
          "name": "",
          "website": "",
        },
      ],
    },
    "message": "",
    "pagenum": "",
    "query": "",
    "status": "idle",
  },
}
`;

exports[`App should handle SHOW_ALERT 1`] = `
Object {
  "alerts": Array [
    Object {
      "icon": undefined,
      "id": "test",
      "message": "HELLO",
      "position": "bottom-right",
      "timeout": 5,
      "type": "success",
    },
  ],
  "app": Object {
    "data": Object {
      "product": Object {
        "description": "",
        "hours": Object {},
        "images": Array [],
        "name": "",
      },
      "products": Array [
        Object {
          "id": "",
          "images": Array [
            Object {
              "id": 0,
              "image_urls": Object {
                "thumb": "",
              },
            },
          ],
          "name": "",
          "website": "",
        },
      ],
    },
    "message": "",
    "pagenum": "",
    "query": "",
    "status": "idle",
  },
}
`;

exports[`App should return the initial state 1`] = `
Object {
  "alerts": Array [],
  "app": Object {
    "data": Object {
      "product": Object {
        "description": "",
        "hours": Object {},
        "images": Array [],
        "name": "",
      },
      "products": Array [
        Object {
          "id": "",
          "images": Array [
            Object {
              "id": 0,
              "image_urls": Object {
                "thumb": "",
              },
            },
          ],
          "name": "",
          "website": "",
        },
      ],
    },
    "message": "",
    "pagenum": "",
    "query": "",
    "status": "idle",
  },
}
`;
